Avances en el informe

--- a/Informe.ipynb
+++ b/Informe.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Escuela Politécnica Nacional\n",
-    "# Métodos Numéricos - Primer Bimestre\n",
-    "## Informe del proyecto del sobrevuelo\n",
-    "### Integrantes:\n",
-    "### - Bautista Alexis\n",
-    "### - Egas David\n",
-    "### - Ochoa Aubertin\n",
-    "### - Romero Erick\n",
+    "# Escuela Politécnica Nacional  \n",
+    "# Métodos Numéricos - Primer Bimestre  \n",
+    "## Informe del proyecto del sobrevuelo  \n",
+    "**Integrantes:**\n",
+    "- Bautista Alexis\n",
+    "- Egas David\n",
+    "- Ochoa Aubertin\n",
+    "- Romero Erick\n",
     "\n",
-    "## 29/11/2024"
+    "**Fecha de Presentación:** 30/11/2024"
    ]
   },
   {
@@ -21,7 +21,13 @@
    "metadata": {},
    "source": [
     "## Objetivos\n",
-    "Desarrollar un programa gráfico interactivo que permita simular la trayectoria de una bomba lanzada desde un avión, considerando variables físicas como la velocidad inicial, altura del avión, características del cañón, ángulo de lanzamiento y distancia, con el fin de analizar y visualizar el comportamiento de la trayectoria.\n"
+    "\n",
+    "### Objetivo General\n",
+    "Desarrollar un programa gráfico interactivo en Python que simule la trayectoria de una bomba lanzada desde un avión hacia un objetivo representado por un trapecio isósceles invertido, incorporando variables físicas relevantes como velocidad inicial, altura del avión, ángulo de lanzamiento, y características del cañón, para analizar y visualizar de manera precisa el comportamiento de la trayectoria.\n",
+    "\n",
+    "### Objetivos Especificos\n",
+    "- Diseñar una interfaz gráfica de usuario interactiva que permita a los usuarios modificar variables como velocidad inicial, altura, ángulo y características del cañón, visualizando en tiempo real el impacto de estos parámetros en la trayectoria simulada.\n",
+    "- Desarrollar una interfaz visual que incluyan gráficos dinámicos, indicación del punto de impacto, y la representación clara del objetivo en forma de trapecio isósceles invertido, para facilitar la interpretación de resultados."
    ]
   },
   {
@@ -29,16 +35,26 @@
    "metadata": {},
    "source": [
     "## Metodología\n",
-    "### Descripción de la Solución\n"
+    "\n",
+    "### Introducción a la Metodología\n",
+    "\n",
+    "La metodología propuesta se centra en desarrollar una simulación interactiva que permita modelar y analizar la trayectoria de una bomba lanzada desde un avión hacia un cañón, considerando variables físicas y geométricas. Este proceso combina principios de física, matemáticas, y desarrollo de software, utilizando Python y bibliotecas específicas para cálculos, visualización gráfica y diseño de interfaces.\n",
+    "\n",
+    "### Descripción de la Solución\n",
+    "\n",
+    "El problema plantea un escenario donde un avión vuela con velocidad constante $v$ a una altura $H_a$, lanzando una bomba hacia un cañón con forma de trapecio isósceles invertido. Para determinar si la bomba impacta el cañón, se implementa un modelo físico del movimiento parabólico. \n",
+    "El objetivo es calcular las coordenadas de la trayectoria $(x,y)$ y determinar si el impacto ocurre dentro del cañón.\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Desarrollo Matemático de la Trayectoria\n",
+    "## Desarrollo Matemático de la Trayectoria\n",
     "\n",
-    "El programa simula la trayectoria de una bomba lanzada desde un avión en movimiento horizontal. La trayectoria se calcula utilizando las ecuaciones del movimiento parabólico bajo la influencia de la gravedad, considerando los siguientes parámetros:\n",
+    "El programa para simular la trayectoria de una bomba utilizanda las ecuaciones del movimiento parabólico bajo la influencia de la gravedad, considerando los siguientes parámetros:\n",
     "\n",
     "- **v**: Velocidad del avión (m/s).\n",
     "- **h<sub>a</sub>**: Altura inicial del avión (m).\n",
@@ -48,7 +64,7 @@
     "- **L**: Longitud del cañón (m).\n",
     "- **g**: Aceleración gravitacional (g = 9.81 m/s²).\n",
     "\n",
-    "## 1. Posición Inicial del Avión\n",
+    "### 1. Posición Inicial del Avión\n",
     "\n",
     "El avión vuela a una altura constante **h<sub>a</sub>** con velocidad horizontal **v**. La posición inicial en el eje horizontal (**x<sub>0</sub>**) se determina considerando el tiempo que la bomba tarda en caer (**t<sub>total</sub>**) desde **h<sub>a</sub>** hasta el suelo:     \n",
     "\n",
@@ -68,7 +84,7 @@
     "\n",
     "\n",
     "\n",
-    "## 2. Ecuaciones de Movimiento\n",
+    "### 2. Ecuaciones de Movimiento\n",
     "\n",
     "La trayectoria de la bomba se describe mediante las ecuaciones de movimiento parabólico:\n",
     "\n",
@@ -86,13 +102,13 @@
     "\n",
     "\n",
     "\n",
-    "## 3. Determinación del Impacto\n",
+    "### 3. Determinación del Impacto\n",
     "\n",
     "Para verificar si la bomba impacta el cañón, se evalúa si la trayectoria intercepta las coordenadas del cañón (**d ≤ x ≤ d + L**) dentro de su altura (**-h<sub>c</sub>**):\n",
     "\n",
     "Si **y(t) ≤ -h<sub>c</sub>** cuando **x(t)** está dentro del rango del cañón, entonces hay impacto exitoso. Si se requiere mayor precisión, se utiliza interpolación lineal entre los puntos cercanos para determinar con exactitud el valor de **x** correspondiente a **y = -h<sub>c</sub>**.\n",
     "\n",
-    "## Simplificación Gráfica del Cañón\n",
+    "### Simplificación Gráfica del Cañón\n",
     "\n",
     "El cañón se representa como un trapecio isósceles invertido. Las coordenadas de los vértices son calculadas considerando su inclinación (**α**):\n",
     "\n",
@@ -102,6 +118,47 @@
     "- **Inclinación**: **tan(α)**\n",
     "\n",
     "El trapecio asegura que la representación sea visualmente coherente con la posición del impacto.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementación Técnica\n",
+    "\n",
+    "### 1. Selección de Bibliotecas\n",
+    "\n",
+    "- Cálculos matemáticos: numpy para operaciones vectoriales y scipy.interpolate para interpolaciones.\n",
+    "- Visualización: matplotlib para gráficos estáticos y animaciones con FuncAnimation.\n",
+    "- Interfaz gráfica: tkinter para capturar datos de usuario y manejar errores, y Pillow para mejorar el diseño con imágenes.\n",
+    "\n",
+    "### 2. Estructura del Código\n",
+    "\n",
+    "- Módulo de Cálculo: Genera la trayectoria y determina el impacto.\n",
+    "- Módulo de Visualización: Representa gráficamente la trayectoria, el avión, y el cañón.\n",
+    "- Interfaz Gráfica de Usuario: Permite ingresar parámetros, verificar valores, y mostrar resultados."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pasos Metodológicos\n",
+    "\n",
+    "- Definición del Problema: Se estableció las ecuaciones y parámetros físicos requeridos para modelar el escenario.\n",
+    "\n",
+    "- Diseño de la Interfaz Gráfica: Se creó una GUI amigable que permite:\n",
+    "    - Ingreso de parámetros de manera controlada.\n",
+    "    - Validación de datos para evitar errores en los cálculos.\n",
+    "    - Implementación del Modelo Matemático\n",
+    "\n",
+    "- Simulación y Visualización\n",
+    "    - Generar gráficos dinámicos de la trayectoria.\n",
+    "    - Superponer el cañón como un trapecio isósceles invertido.\n",
+    "\n",
+    "- Validación del Modelo: Se eealizó pruebas con escenarios controlados para verificar la precisión del modelo y corregir discrepancias.\n",
+    "\n",
+    "- Documentación: Se redacto un manual técnico y de usuario que detalla el funcionamiento del programa. "
    ]
   },
   {
