--- a/Informe.ipynb
+++ b/Informe.ipynb
@@ -165,9 +165,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Desarrollo matemático.\n",
-    "### Diagrama de flujo / pseudocódigo.\n",
-    "### Detalles importantes de la implementación."
+    "# Implementación\n",
+    "\n",
+    "El archivo solver.py es donde se encuentra la lógica para solucionar el problema implementa una función llamada calcular_trayectoria, que utiliza ecuaciones del movimiento parabólico para calcular la trayectoria de una bomba lanzada desde un avión y determinar si impacta en un cañón. La función toma como parámetros la velocidad inicial del avión, la altura inicial, la geometría del cañón (altura, longitud y ángulo de inclinación), y la distancia horizontal inicial. Calcula las posiciones horizontales y verticales $(x,y)$ a lo largo del tiempo usando simulaciones temporales con precisión ajustada. Además, verifica si la trayectoria intercepta el suelo o el área representada por el cañón, devolviendo las coordenadas del impacto y un indicador de éxito o fracaso en el alcance del objetivo. Esto se logra mediante iteraciones y verificaciones condicionales sobre las posiciones calculadas.\n",
+    "\n",
+    "El archivo gui_input.py crea una interfaz gráfica en Python utilizando Tkinter para capturar y validar los datos necesarios para simular la trayectoria de una bomba. El flujo comienza con una ventana de bienvenida que presenta el proyecto y a los integrantes, mostrando también una imagen relevante. Posteriormente, al ingresar a la segunda ventana, el usuario puede ingresar parámetros como la velocidad del avión, altura, distancia y características del cañón. Cada entrada está vinculada a una variable que se valida antes de procesar los datos, asegurando que sean lógicos y correctos (por ejemplo, valores positivos o rangos válidos). En caso de error, se muestra un mensaje emergente informando al usuario. Si los datos son válidos, se llama a una función para calcular y mostrar los resultados de la simulación en otra ventana.\n",
+    "\n",
+    "El archivo gui_output.py se encarga de visualizar la simulación de la trayectoria de la bomba y mostrar los resultados. Después de calcular la trayectoria de la bomba utilizando la función calcular_trayectoria, se configura una gráfica en la que se dibuja la trayectoria de la bomba y el cañón (representado por un trapecio invertido). Usando matplotlib y FuncAnimation, la trayectoria se anima en tiempo real, mostrando cómo la bomba se desplaza hasta el suelo o el cañón. Al finalizar la animación, se muestra un mensaje emergente con el resultado: si la bomba impacta el suelo o el cañón, se informa la ubicación del impacto; si no, se indica que no hubo impacto. Esto proporciona una visualización interactiva y detallada del comportamiento de la bomba en su trayecto."
    ]
   }
  ],
