Correccion de errores en el informe

--- a/Informe.ipynb
+++ b/Informe.ipynb
@@ -156,7 +156,7 @@
     "    - Generar gráficos dinámicos de la trayectoria.\n",
     "    - Superponer el cañón como un trapecio isósceles invertido.\n",
     "\n",
-    "- Validación del Modelo: Se eealizó pruebas con escenarios controlados para verificar la precisión del modelo y corregir discrepancias.\n",
+    "- Validación del Modelo: Se realizó pruebas con escenarios controlados para verificar la precisión del modelo y corregir discrepancias.\n",
     "\n",
     "- Documentación: Se redacto un manual técnico y de usuario que detalla el funcionamiento del programa. "
    ]
