Update Informe.ipynb to correct validation description, enhance documentation structure, and add results and conclusions sections

--- a/Informe.ipynb
+++ b/Informe.ipynb
@@ -156,7 +156,7 @@
     "    - Generar gráficos dinámicos de la trayectoria.\n",
     "    - Superponer el cañón como un trapecio isósceles invertido.\n",
     "\n",
-    "- Validación del Modelo: Se realizó pruebas con escenarios controlados para verificar la precisión del modelo y corregir discrepancias.\n",
+    "- Validación del Modelo: Se eealizó pruebas con escenarios controlados para verificar la precisión del modelo y corregir discrepancias.\n",
     "\n",
     "- Documentación: Se redacto un manual técnico y de usuario que detalla el funcionamiento del programa. "
    ]
@@ -165,13 +165,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implementación\n",
+    "# Documentación\n",
+    "\n",
+    "## Estructura del proyecto\n",
+    "\n",
+    "El código se divide en varios archivos, cada uno con una funcionalidad específica:\n",
+    "\n",
+    "- gui_input.py: Maneja la interfaz gráfica donde el usuario ingresa los datos necesarios para realizar la simulación.\n",
+    "- gui_output.py: Muestra los resultados de la simulación y genera una animación de la trayectoria de la bomba.\n",
+    "- solver.py: Contiene la lógica para calcular la trayectoria de la bomba y verificar el impacto en el suelo o el cañón.\n",
     "\n",
     "El archivo solver.py es donde se encuentra la lógica para solucionar el problema implementa una función llamada calcular_trayectoria, que utiliza ecuaciones del movimiento parabólico para calcular la trayectoria de una bomba lanzada desde un avión y determinar si impacta en un cañón. La función toma como parámetros la velocidad inicial del avión, la altura inicial, la geometría del cañón (altura, longitud y ángulo de inclinación), y la distancia horizontal inicial. Calcula las posiciones horizontales y verticales $(x,y)$ a lo largo del tiempo usando simulaciones temporales con precisión ajustada. Además, verifica si la trayectoria intercepta el suelo o el área representada por el cañón, devolviendo las coordenadas del impacto y un indicador de éxito o fracaso en el alcance del objetivo. Esto se logra mediante iteraciones y verificaciones condicionales sobre las posiciones calculadas.\n",
     "\n",
     "El archivo gui_input.py crea una interfaz gráfica en Python utilizando Tkinter para capturar y validar los datos necesarios para simular la trayectoria de una bomba. El flujo comienza con una ventana de bienvenida que presenta el proyecto y a los integrantes, mostrando también una imagen relevante. Posteriormente, al ingresar a la segunda ventana, el usuario puede ingresar parámetros como la velocidad del avión, altura, distancia y características del cañón. Cada entrada está vinculada a una variable que se valida antes de procesar los datos, asegurando que sean lógicos y correctos (por ejemplo, valores positivos o rangos válidos). En caso de error, se muestra un mensaje emergente informando al usuario. Si los datos son válidos, se llama a una función para calcular y mostrar los resultados de la simulación en otra ventana.\n",
     "\n",
     "El archivo gui_output.py se encarga de visualizar la simulación de la trayectoria de la bomba y mostrar los resultados. Después de calcular la trayectoria de la bomba utilizando la función calcular_trayectoria, se configura una gráfica en la que se dibuja la trayectoria de la bomba y el cañón (representado por un trapecio invertido). Usando matplotlib y FuncAnimation, la trayectoria se anima en tiempo real, mostrando cómo la bomba se desplaza hasta el suelo o el cañón. Al finalizar la animación, se muestra un mensaje emergente con el resultado: si la bomba impacta el suelo o el cañón, se informa la ubicación del impacto; si no, se indica que no hubo impacto. Esto proporciona una visualización interactiva y detallada del comportamiento de la bomba en su trayecto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resultados\n",
+    "\n",
+    "Pantalla de inicio:\n",
+    "\n",
+    "![](ADJUNTOS/PantallaInicio.png)\n",
+    "\n",
+    "Pantalla de ingreso de datos:\n",
+    "\n",
+    "![](ADJUNTOS/IngresoDatos.png)\n",
+    "\n",
+    "Validación entradas no validas:\n",
+    "\n",
+    "![](ADJUNTOS/inputError.png)\n",
+    "\n",
+    "Ejecucion:\n",
+    "\n",
+    "![](ADJUNTOS/ejecucion.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusiones\n",
+    "\n",
+    "- Este proyecto combina física, programación y visualización para crear una simulación interactiva y educativa. A través de una interfaz gráfica sencilla, permite al usuario experimentar cómo diversos parámetros afectan la trayectoria de un objeto lanzado, proporcionándole una herramienta visual y comprensible para analizar este tipo de problemas físicos.\n",
+    "\n",
+    "- El uso de una interfaz gráfica interactiva permite experimentar de forma visual cómo varían los resultados al modificar los parámetros de la simulación. Esto facilita la comprensión de los conceptos de física relacionados con el movimiento parabólico y la influencia de variables como la velocidad, la altura y el ángulo. La animación en tiempo real hace que la experiencia sea más dinámica.\n",
+    "\n",
+    "- Este proyecto demuestra cómo diferentes bibliotecas de Python, como Tkinter, Matplotlib, y PIL, pueden integrarse eficazmente para crear una aplicación funcional. La interacción entre estas herramientas permite una experiencia de usuario fluida y profesional, mientras que las funciones matemáticas y científicas están respaldadas por bibliotecas como Numpy."
    ]
   }
  ],
